Revision history for Sub::Chain::Group

{{$NEXT}}

0.012     2011-07-15T00:19:37Z

  - Documentation fixes
  - Superficial dist/release changes

0.010011  2011-01-07T06:15:22Z

  - Initial release